RESOLVED FIXED304296
Prevent Safari crashes when scrolling reddit
https://bugs.webkit.org/show_bug.cgi?id=304296
Summary Prevent Safari crashes when scrolling reddit
ccarley2
Reported 2025-12-16 16:04:22 PST
rdar://166587473 The WeakPtr to m_page in the FindTextMatchCallbackAggregator needs a null check.
Attachments
ccarley2
Comment 1 2025-12-16 16:09:45 PST
EWS
Comment 2 2025-12-18 13:55:55 PST
Committed 304702@main (52e754af3c91): <https://commits.webkit.org/304702@main> Reviewed commits have been landed. Closing PR #55523 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.